--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.11.0"
+    "nodemon": "^3.1.2",
+    "prisma": "^5.11.0",
+    "stripe": "^15.12.0"
   }
 }
