--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.0.0",
     "axios": "^1.6.7",
     "dompurify": "^3.0.9",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.2",
     "sass": "^1.71.1",
