--- a/socket/package.json
+++ b/socket/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "nodemon": "^3.1.2",
     "socket.io": "^4.7.5"
   }
 }
